# fiap-pos-ia-para-devs-fase2-tech-challenge

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  restar_containers.sh  validations.ipynb
backend/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
backend/docs/: adr.md  architecture.md  genetic_algo_dashboard_mockup.html  plan-fluxo2-training-and-tunning.md  plano_dashboard_ag.md
backend/models/artifacts/: encoders.joblib  mappings.json
backend/models/logs/: ga_generation_stats.csv  ga_history.json
backend/scripts/: README.md  run_predictions.py  run_preprocessing.py  run_tuning.py
backend/src/agents/: nutritional_agent.py
backend/src/api/: job_store.py  main.py  pipeline_store.py  session_store.py
backend/src/api/routes/: health.py  llm.py  pipeline.py  tuning.py
backend/src/api/schemas/: llm.py  tuning.py
backend/src/data/: ingest.py  preprocessing.py
backend/src/models/: ga_operators.py  ga_snapshot.py  genetic_algorithm.py
backend/src/services/: tuning_service.py
backend/src/utils/: logger.py
backend/tests/integration/: test_api_tuning.py
backend/tests/unit/: test_llm_agent.py
docs/: adr.md  architecture.md  plan-frontend-migration.md
frontend/: .gitignore  Dockerfile  README.md  pyproject.toml
frontend/app/: main.py
frontend/app/pages/: 01_preprocessing.py  02_tuning.py  03_predictions.py  04_llm_chat.py  05_pipeline_explanation.py  chat_agent.py  tuning_monitor.py
frontend/src/: api_client.py
models/artifacts/: encoders.joblib
models/logs/: ga_generation_stats.csv  ga_history.json
scripts/: README.md  run_preprocessing.py  run_tuning.py
src/app/pages/: tuning_monitor.py
src/data/: __init__.py  features.py
src/models/: ga_evaluator.py  ga_persistence.py  genetic_algorithm.py  individuo.py
src/utils/: persistence.py  validators.py
tests/integration/: test_ga_optimizer.py
tests/unit/: test_ga_evaluator.py  test_ga_operators.py  test_llm_agent.py
