[project]
name = "fiap-pos-ia-para-devs-fase2-tech-challenge"
version = "0.1.0"
description = "Sistema de análise e previsão de estado nutricional com base em dados SISVAN"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<0.13.0",
    "plotly>=5.14.0,<6.0.0",
    "streamlit>=1.28.0,<2.0.0",
    "joblib>=1.3.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "langchain>=0.3.0,<1.0.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "deap>=1.4.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]