[project]
name = "sisvan-frontend"
version = "0.1.0"
description = "Front-end Streamlit — SISVAN Nutricional"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "streamlit>=1.28.0,<2.0.0",
    "plotly>=5.14.0,<6.0.0",
    "pandas>=2.0.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
